{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 168,
  "lineage": "865bb04a-2694-031f-1f98-98cb81503eff",
  "resources": [
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:internet-gateway/igw-00ee4ca30b5d55f8c",
            "id": "igw-00ee4ca30b5d55f8c",
            "owner_id": "717491011807",
            "tags": {
              "Name": "TerraformInfrastructure-igw"
            },
            "tags_all": {
              "Name": "TerraformInfrastructure-igw"
            },
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:route-table/rtb-0f8240cf56a2ee390",
            "id": "rtb-0f8240cf56a2ee390",
            "owner_id": "717491011807",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:route-table/rtb-0c62221952e6a2142",
            "id": "rtb-0c62221952e6a2142",
            "owner_id": "717491011807",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az1_route_table_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05942aa3c48635a06",
            "route_table_id": "rtb-0f8240cf56a2ee390",
            "subnet_id": "subnet-0252ce56fe6537a34"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private_route_table",
            "module.VPC.aws_subnet.private_subnet_az1",
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_az2_route_table_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad221d7166acb06",
            "route_table_id": "rtb-0f8240cf56a2ee390",
            "subnet_id": "subnet-08d2c8eb2a0739e99"
          },
          "dependencies": [
            "module.VPC.aws_route_table.private_route_table",
            "module.VPC.aws_subnet.private_subnet_az2",
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a909c33aeeb273d",
            "route_table_id": "rtb-0c62221952e6a2142",
            "subnet_id": "subnet-0e4735713790af595"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.public_subnet_az1",
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d90a9624506b53d",
            "route_table_id": "rtb-0c62221952e6a2142",
            "subnet_id": "subnet-06db5e975a01e1b3e"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public_route_table",
            "module.VPC.aws_subnet.public_subnet_az2",
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:subnet/subnet-0252ce56fe6537a34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0252ce56fe6537a34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717491011807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet az1"
            },
            "tags_all": {
              "Name": "private subnet az1"
            },
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:subnet/subnet-08d2c8eb2a0739e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d2c8eb2a0739e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "717491011807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:subnet/subnet-0e4735713790af595",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4735713790af595",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717491011807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:subnet/subnet-06db5e975a01e1b3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06db5e975a01e1b3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "717491011807",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-0ae47649f0dfc8b6a"
          },
          "dependencies": [
            "module.VPC.aws_vpc.VPC",
            "module.VPC.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:717491011807:vpc/vpc-0ae47649f0dfc8b6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d88af562316eacbb",
            "default_route_table_id": "rtb-0c3e20b72b87b3105",
            "default_security_group_id": "sg-09d57ac10a7e4ccc6",
            "dhcp_options_id": "dopt-09a1a2cfebdb7d57f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae47649f0dfc8b6a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c3e20b72b87b3105",
            "owner_id": "717491011807",
            "tags": {
              "Name": "TerraformInfrastructure-vpc"
            },
            "tags_all": {
              "Name": "TerraformInfrastructure-vpc"
            }
          }
        }
      ]
    }
  ]
}